# StateMachineWithModernDelegates

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
Delegate/: Delegate.h  DelegateAsync.h  DelegateOpt.h  MulticastDelegate.h
DelegateMQ/: Common.cmake  DelegateMQ.cmake  DelegateMQ.h  External.cmake  Macros.cmake  Predef.cmake
DelegateMQ/delegate/: Delegate.h  DelegateAsync.h  DelegateAsyncWait.h  DelegateMsg.h  DelegateOpt.h  DelegateRemote.h  IDispatcher.h  IInvoker.h  ISerializer.h  IThread.h  MulticastDelegate.h  MulticastDelegateSafe.h  Semaphore.h  Signal.h  SignalSafe.h  UnicastDelegate.h  UnicastDelegateSafe.h  make_tuple_heap.h
DelegateMQ/predef/allocator/: Allocator.cpp  Allocator.h  xallocator.cpp  xallocator.h
DelegateMQ/predef/dispatcher/: Dispatcher.h  README.md
DelegateMQ/predef/os/: README.md
DelegateMQ/predef/os/cmsis-rtos2/: Thread.cpp  Thread.h
DelegateMQ/predef/os/freertos/: Thread.cpp  Thread.h  ThreadMsg.h
DelegateMQ/predef/os/qt/: Thread.cpp  Thread.h
DelegateMQ/predef/os/stdlib/: Thread.cpp  Thread.h  ThreadMsg.h
DelegateMQ/predef/os/threadx/: Thread.cpp  Thread.h
DelegateMQ/predef/os/zephyr/: Thread.cpp  Thread.h
DelegateMQ/predef/serialize/: README.md
DelegateMQ/predef/serialize/bitsery/: Serializer.h
DelegateMQ/predef/serialize/cereal/: Serializer.h
DelegateMQ/predef/serialize/msgpack/: Serializer.h
DelegateMQ/predef/serialize/rapidjson/: Serializer.h
DelegateMQ/predef/serialize/serialize/: Serializer.h  msg_serialize.h
DelegateMQ/predef/transport/: DmqHeader.h  ITransport.h  ITransportMonitor.h  README.md
DelegateMQ/predef/transport/arm-lwip-udp/: ArmLwipUdpTransport.h
DelegateMQ/predef/transport/linux-tcp/: LinuxTcpTransport.h
DelegateMQ/predef/transport/linux-udp/: LinuxUdpTransport.h
DelegateMQ/predef/transport/mqtt/: MqttTransport.h
DelegateMQ/predef/transport/netx-udp/: NetXUdpTransport.h
DelegateMQ/predef/transport/nng/: NngTransport.h
DelegateMQ/predef/transport/serial/: SerialTransport.h
DelegateMQ/predef/transport/win32-pipe/: Win32PipeTransport.h
DelegateMQ/predef/transport/win32-tcp/: Win32TcpTransport.h
DelegateMQ/predef/transport/win32-udp/: Win32UdpTransport.h
DelegateMQ/predef/transport/zephyr-udp/: ZephyrUdpTransport.h
DelegateMQ/predef/transport/zeromq/: ZeroMqTransport.h
DelegateMQ/predef/util/: AsyncInvoke.h  BareMetalClock.h  CmsisRtos2Clock.h  CmsisRtos2Mutex.h  Fault.cpp  FreeRTOSClock.h  FreeRTOSMutex.h  NetworkEngine.cpp  NetworkEngine.h  README.md  ReliableTransport.h  RemoteEndpoint.h  RetryMonitor.h  ThreadXClock.h  ThreadXMutex.h  Timer.cpp  Timer.h  TransportMonitor.h  WinsockConnect.h  ZephyrClock.h  ZephyrMutex.h  crc16.h
Port/: Fault.h
SelfTest/: CentrifugeTest.cpp  CentrifugeTest.h  SelfTest.cpp  SelfTest.h  SelfTestEngine.cpp  SelfTestEngine.h
StateMachine/: StateMachine.h
VS2015/VS2015/: VS2015.vcxproj  VS2015.vcxproj.filters
